--- a/package.json
+++ b/package.json
@@ -27,28 +27,40 @@
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.106",
+    "@hookform/resolvers": "^5.2.2",
     "@openrouter/ai-sdk-provider": "^1.3.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.1.7",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^0.0.36",
     "@react-email/render": "^2.0.2",
     "@sentry/nextjs": "^10.32.1",
+    "@tanstack/react-table": "^8.21.3",
     "@vercel/blob": "^2.0.0",
     "ai": "^5.0.106",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.7",
+    "framer-motion": "^12.26.1",
     "ioredis": "^5.9.1",
     "lucide-react": "^0.539.0",
     "next": "16.0.7",
@@ -61,8 +73,13 @@
     "posthog-node": "^5.20.0",
     "qrcode": "^1.5.4",
     "react": "19.2.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.71.0",
     "react-markdown": "^10.1.0",
+    "react-player": "^3.4.0",
+    "recharts": "2.15.4",
     "resend": "^4.0.0",
     "sonner": "^2.0.7",
     "stripe": "^20.1.2",
@@ -73,7 +90,9 @@
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.17",
     "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^20.19.25",
     "@types/nodemailer": "^7.0.5",
